--- a/工数常用公式.md
+++ b/工数常用公式.md
@@ -24,7 +24,7 @@ $
 \sin\alpha \sin\beta = -\dfrac{1}{2} [\cos(\alpha + \beta) - \cos(\alpha - \beta)]
 $
 
-### 常用函数导数
+### 常用函数一阶导数
 
 $
 (\sum\limits_{i=1}^nc_if_i(x))' = \sum\limits_{i=1}^nc_if'_i(x)
@@ -46,6 +46,21 @@ $
 (\arccos x)' = - \dfrac{1}{\sqrt{1-x^2}}
 $
 
+### 常用函数高阶导数
+
+$
+(a^x)^{(n)} = a^x \ln^n a
+\\
+(x^\mu)^{(n)} = \mu (\mu - 1) (\mu -2) \cdots (\mu - n + 1)x^{(\mu - n)} 
+\\
+(\log_a x)^{(n)} = \dfrac{(-1)^{n-1}(n-1)!}{x^n \ln a}
+\\
+(\sin x) ^{(n)} = \sin (x+\dfrac{n \pi}{2})
+\\
+(\cos x) ^{(n)} = \cos (x+\dfrac{n \pi}{2})
+\\
+(u \cdot v)^{(n)} = \sum\limits_{k=0}^n \text{C}_n^k u ^k v^{n-k}
+$
 
 ### 常用等价无穷小
 
@@ -84,4 +99,33 @@ x - \arctan x \sim \dfrac{x^3}{3}
 \arcsin x - x \sim \dfrac{x^3}{6}
 \\
 x - \sin x \sim \dfrac{x^3}{6}
+$
+
+### Taylor & Maclaurin 公式
+一般的 Taylor 公式：
+
+$
+\text{Peano:}\ \  f(x) = \sum\limits_{k=0}^n \dfrac{f^{(n)}(x_0)}{k!}(x-x_0)^k + o((x-x_0)^k).
+\\
+\text{Lagrange:}\ \ f(x) = \sum\limits_{k=0}^n \dfrac{f^{(n)}(x_0)}{k!}(x-x_0)^k + \dfrac{f^{(n+1)}(\xi)}{(n+1)!} (x-x_0)^{n+1}.
+$
+
+常用的 Maclaurin 公式： $(\theta \in (0,1))$
+
+$
+e^x = 1 + x + \dfrac{x^2}{2!} + \cdots + \dfrac{e^n}{n!} + \dfrac{x^{n+1}}{(n+1)!} e^{\theta x}
+\\
+\sin x = x - \dfrac{x^3}{3!} + \dfrac{x^5}{5!} - \dfrac{x^7}{7!} + \cdots + (-1)^{m-1} \dfrac{x^{2m-1}}{(2m-1)!} + (-1)^m \dfrac{\cos \theta x}{(2m+1)!}x^{2m+1}
+\\
+\cos x = 1 - \dfrac{x^2}{2!} + \dfrac{x^4}{4!} - \dfrac{x^6}{6!} + \cdots + (-1)^{m} \dfrac{x^{2m}}{(2m)!} + (-1)^{m+1} \dfrac{\cos \theta x}{(2m+2)!}x^{2m+2}
+\\
+\ln (1+x) = x - \dfrac{x^2}{2} + \dfrac{x^3}{3} - \dfrac{x^4}{4} + \cdots + (-1)^{n-1} \dfrac{x^n}{n} + (-1)^n \dfrac{x^{n+1}}{(n+1)(1+\theta x)^{n+1}}
+\\
+(1+x)^{\alpha} = 1 + \alpha x + \dfrac{\alpha (\alpha - 1)}{2!} x + \cdots + \dfrac{\alpha(\alpha - 1) \cdots (\alpha -n+1)}{n!} x^n + \dfrac{\alpha(\alpha - 1)\cdots (\alpha - n)}{(n+1)!} \dfrac{x^{n+1}}{(1+\theta x)^{n+1-\alpha}}
+\\
+\dfrac{1}{1+x} = 1 - x + x^2 -x^3 + \cdots + (-1)^n x^n + (-1)^{n+1} \dfrac{x^{n+1}}{(1+\theta x)^{n+2}}
+\\
+\sqrt{1+x} = 1 + \dfrac{1}{2} x - \dfrac{1}{8} x^2 + \cdots + (-1)^{n-1} \dfrac{1 \cdot 3 \cdot \cdots \cdot (2n-3)}{2 \cdot 4 \cdot \cdots \cdot 2n} x^n + (-1)^n \dfrac{1 \cdot 3 \cdot \cdots \cdot (2n-1)}{2 \cdot 4 \cdot \cdots \cdot (2n+2)} \dfrac{x^{n+1}}{(1+\theta x)^{n+ \frac{1}{2}}}
+\\
+\dfrac{1}{\sqrt{1+x}} = 1 - \dfrac{1}{2} x + \dfrac{3}{8} x^2 - \cdots + (-1)^n \dfrac{1 \cdot 3 \cdot \cdots \cdot (2n-1)}{2 \cdot 4 \cdot \cdots \cdot 2n} x^n + (-1)^{n+1} \dfrac{1\cdot 3 \cdot \cdots \cdot (2n+1)}{2 \cdot 4 \cdot \cdots \cdot (2n+2)} \dfrac{x^{n+1}}{(1+\theta x)^{n+ \frac{3}{2}}}
 $
