--- a/工数常用公式.md
+++ b/工数常用公式.md
@@ -70,7 +70,9 @@ $
 $
 \sin x \sim x
 \\
-\cos x \sim 1 - \dfrac{x^2}{2} \tan x \sim x
+\cos x \sim 1 - \dfrac{x^2}{2} 
+\\
+\tan x \sim x
 \\
 \arcsin x \sim x
 \\
