--- a/正则表达式小结.md
+++ b/正则表达式小结.md
@@ -1,6 +1,6 @@
 # 正则表达式小结
 
-### 1. 正则表达式的结构
+## 1. 正则表达式的结构
 
 例如：
 ```shell
@@ -8,8 +8,8 @@
 ```
 其中 `/ /` 之间的为表达式的主体， 末尾的 `g` 为修饰符，正则表达式主体即为我们要匹配的对象。
 
-### 2. 正则表达式主体的含义
-#### 2.1 简单字符
+## 2. 正则表达式主体的含义
+### 2.1 简单字符
 简单字符就是没有特殊意义的字符，作用与我们平日里使用的查找一样。它是什么就匹配什么。
 
 ```shell
@@ -17,7 +17,7 @@
 /123/ -> 123
 ```
 
-#### 2.2 转义字符
+### 2.2 转义字符
 与 Markdown 类似，正则表达式也有转义字符。
 
 下面是转义字符表
@@ -51,7 +51,7 @@
 | `\*`     | 匹配 * 本身                          |
 
 
-#### 2.3 限定符（ 量词 ）
+### 2.3 限定符（ 量词 ）
 
 限定符一共有六种，用于指定匹配的次数。作用的范围为前面的单个字符或是 `[]` 内的字符串。例如 `ab*` 中 `*` 仅作用于 `b` 而 `[ab]*` 中 `*` 则作用于 `ab` 。
 
@@ -64,7 +64,7 @@
 | `{n,}`  | n 是一个非负整数。至少匹配n 次。例如，'o{2,}' 不能匹配 "Bob" 中的 'o'，但能匹配 "foooood" 中的所有 o。'o{1,}' 等价于 'o+'。'o{0,}' 则等价于 'o*' |
 | `{n,m}` | 	m 和 n 均为非负整数，其中n <= m。最少匹配 n 次且最多匹配 m 次。例如，"o{1,3}" 将匹配 "fooooood" 中的前三个 o。'o{0,1}' 等价于 'o?'。请注意在逗号和两个数之间不能有空格。 |
 
-#### 2.4 特殊字符
+### 2.4 特殊字符
 
  | 特殊字符  | 含义                                   |
 | -------- | ---------------------------------------- |
@@ -73,8 +73,8 @@
 | `^`     | 	匹配输入字符串的开始位置，除非在方括号表达式中使用，当该符号在方括号表达式中使用时，表示不接受该方括号表达式中的字符集合。 |
 | `|`     | 	指明两项之间的一个选择。              |
 
-#### 2.5 中括号表达式与子表达式
-##### 中括号表达式
+### 2.5 中括号表达式与子表达式
+#### 中括号表达式
 `[内容]` 为中括号表达式，其作用相当于匹配其中任意一个字符。后面可以跟限定符。例如
 ```shell
 [abc] -> a 或 b 或 c
@@ -98,7 +98,7 @@
 \D -> [^0-9]
 ```
 
-##### 子表达式
+#### 子表达式
 `(内容)` 为子表达式，其作用相当于匹配里面完整的内容。后面可以跟限定符。例如
 ```shell
 (abc) -> abc
@@ -110,14 +110,14 @@
 (123|456) -> 123 或 456
 ```
 
-#### 2.6 正则表达式的贪婪原则
+### 2.6 正则表达式的贪婪原则
 一般的，正则表达式在匹配时，都优先匹配量词的上限而不是下限。例如 `a{2,3}` 会优先匹配 `aaa` 而不是 `aa` .
 
 如果需要优先匹配 `aa` 则需要在后面加上 `?` 表示优先匹配下限。
 
 __简单的说，`?` 跟在 `}` 后面时表示优先匹配下限，除此以外，表示匹配一次或零次。__
 
-#### 2.7 预搜索
+### 2.7 预搜索
 
 当需要查询不在某个字符串后面或前面的字符串时就需要预搜索。预搜索有四种：
 
@@ -130,7 +130,7 @@ exp1(?!exp2) -> 后面不是 exp2 的 exp1
 
 注：后面两种可能有的语言不支持
 
-### 3. 正则表达式的修饰符
+## 3. 正则表达式的修饰符
 
 正则表达式有三种修饰符 `i`, `m`, `g`.
 
